# sososmog_prompt_composer

./: .gitattributes  .gitignore  CLAUDE.md  LICENSE  README.md  eslint.config.js  package-lock.json  package.json  vitest.config.js
.github/workflows/: pr.yml  release.yml
src/: app.js  backup.js  completion.js  core.js  events.js  float.html  guide.js  index.html  quick.js  render.js  store.js  styles.css  translate.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/__tests__/: backup.test.js  completion.test.js  createHistory.test.js  demoContent.test.js  estimateTokens.test.js  float-theme.smoke.mjs  highlightMarkdown.test.js  normalizeState.test.js  parseBlocks.test.js  patchLogic.test.js  setup.js  smoke.test.js  translate.test.js
